@@ -145,7 +145,7 @@ int Client::CalcAAReuseTimer(const AA_DBAction *caa) {
 void Client::ActivateAA(aaID activate){
 	if(activate < 0 || activate >= aaHighestID)
 		return;
-	if(IsStunned() || IsFeared() || IsMezzed() || IsSitting() || GetFeigned())
+	if(IsStunned() || IsFeared() || IsMezzed() || IsSilenced() || IsCharmed() || IsSitting() || GetFeigned())
 		return;
 
 	int AATimerID = GetAATimerID(activate);
